Bug 81421 - UI: Alt-click+drag on the sheet headers immediately crashes LibreOfficeCalc
Summary: UI: Alt-click+drag on the sheet headers immediately crashes LibreOfficeCalc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.5.2 release
Hardware: Other Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.5.0 target:4.4.0.0.beta3
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2014-07-16 09:43 UTC by irezvin
Modified: 2014-12-09 15:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace log (14.25 KB, text/x-log)
2014-07-17 09:31 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description irezvin 2014-07-16 09:43:59 UTC
Problem description: 

When I alt+click+drag a sheet header (as for re-ordering sheets, but holding while Alt), Office immediately exists.

Steps to reproduce:
0. Disable "Alt" key in window manager if it is used to drag windows (it is in most Linux setups)
1. Create new Calc document
2. Alt-click on "Sheet1" below
3. Start dragging while holding "Alt"


Current behavior:
- sheet title is marked as for editing
- then, office crashes immediately

Expected behavior:
office should not crash (no sheets should be re-ordered since to re-order them Alt is not needed)

              
Operating System: Debian
Version: 4.2.5.2 release
Comment 1 Jorendc 2014-07-17 09:30:00 UTC
Thanks for reporting!

You have to do a kind of selection movement of the sheet title while holding the alt-key to make it crash. Dragging it to the cells doesn't result in a crash for me).
Reproducible using LibreOffice Version: 4.2.5.2 Build ID: 420m0(Build:2)

Also using LibreOffice Version: 4.4.0.0.alpha0+
Build ID: f4a2f1e647354efb75be8c90384d6cd3e5f9b9bd

I'll attach a backtrace.

Kind regards,
Joren
Comment 2 Jorendc 2014-07-17 09:31:09 UTC
Created attachment 102972 [details]
backtrace log
Comment 3 Commit Notification 2014-12-09 15:46:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efbd8f7ae0818dd914b6b1cb0b3d86b3a58f5f3e

Resolves: fdo#81421 listen to child window to see if it gets deleted

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-12-09 15:48:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e1c32b3e597eca6934866a4917411c30c5fb1791&h=libreoffice-4-4

Resolves: fdo#81421 listen to child window to see if it gets deleted

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.