Resolves: fdo#81421 listen to child window to see if it gets deleted

Change-Id: Iae2c642ad992c822720bcf1e34827bfaa35876b6