vcl/inc/dndevdis.hxx
@@ -33,7 +33,10 @@ class DNDEventDispatcher: public ::cppu::WeakImplHelper3<
     ::com::sun::star::datatransfer::dnd::XDragGestureListener >
 {
     vcl::Window * m_pTopWindow;
+
     vcl::Window * m_pCurrentWindow;
+    void designate_currentwindow(vcl::Window *pWindow);
+    DECL_LINK(WindowEventListener, VclSimpleEvent*);
 
     ::osl::Mutex m_aMutex;
     ::com::sun::star::uno::Sequence< ::com::sun::star::datatransfer::DataFlavor > m_aDataFlavorList;
